fixtures/python/fallback/should_fail/except_return_default.py
def read_user_name(fetcher):
    try:
        return fetcher()
    except KeyError:
        return "unknown"
